--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.2.0",
     "next": "14.1.0",
     "nodemon": "^3.0.3",
     "react": "^18",
