Adding user to database

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,6 @@
 MONGO="mongodb+srv://aashish98570:kOTpUBW2frreiVky@cluster0.x3uaqsa.mongodb.net/"
+AUTH_SECRET=sghjugfdhjkkg
+AUTH_URL=http://localhost:3000/api/auth
+
+GITHUB_ID=fc90b7b95fb4f8387515
+GITHUB_SECRET=1f538d7cd6eb1920fc0b3aa42c952a603efe1a8d
