--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "nodemon": "^3.0.3",
     "react": "^18",
     "react-dom": "^18"
